--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
+<!-- @format -->
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Qr code Generator</title>
-</head>
-<body>
-    <h1>Qr code Generator</h1>
-    <form action="/generate" method="post">
-        <label for="data">Enter data to encode:</label><br>
-        <input type="text" id="data" name="data" required><br><br>
-        <input type="submit" value="Generate QR Code">
-    </form>
-    
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Qr code Generator</title>
+    </head>
+    <body>
+        <h1>Qr code Generator</h1>
+        <form action="/generate" method="post">
+            <label for="data">Enter data to encode:</label><br />
+            <input type="text" id="data" name="data" /><br /><br />
+            <input type="submit" value="Generate QR Code" />
+        </form>
+    </body>
 </html>
